# docs/swagger.yaml
@@ -199,6 +199,28 @@ paths:
       summary: Authorize the use of the user's Eurobank account
       tags:
       - Accounts
+  /v1/accounts/piraeusbank:
+    post:
+      description: Use the URI to open Piraeusbank's login page<br>You can find login
+        credentials <a href="https://rapidlink.piraeusbank.gr/node/2059">here</a>
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.AddBankAccountResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/responses.UnauthorizedError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+      security:
+      - BearerAuth: []
+      summary: Authorize the use of the user's Piraeusbank account
+      tags:
+      - Accounts
   /verify:
     post:
       parameters:
